fix: input wrapper spacing

--- a/frontend/src/components/SettingsWrapper/LoginSecurityForm/loginSecurityForm.scss
+++ b/frontend/src/components/SettingsWrapper/LoginSecurityForm/loginSecurityForm.scss
@@ -2,7 +2,7 @@
 
 #login-security-form {
 	.input-wrapper {
-		padding-top: rem(9.7);
-		padding-bottom: rem(9.7);
+		padding-top: rem(6);
+		padding-bottom: rem(6);
 	}
 }
