--- a/frontend/src/scss/layout/_badge.scss
+++ b/frontend/src/scss/layout/_badge.scss
@@ -8,6 +8,10 @@
 		border-width: $border-width;
 		background-color: $white !important;
 
+		&.text-normal {
+			text-transform: none;
+		}
+
 		&--primary {
 			color: $primary;
 			border-color: $primary;
